--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   cloud_firestore: ^3.1.11 #acesso ao banco de dados do firebase
   firebase_analytics: ^9.1.3 #Analise da base de dados
   firebase_messaging: ^11.2.12 #Envio de notificações por push
-  carousel_pro: ^1.0.0 # Carrosel (arrastar imagens para o lado)
+  carousel_slider: ^4.0.0 # Carrosel (arrastar imagens para o lado)
   transparent_image: ^2.0.0 #Transição de imagem
   scoped_model: ^1.1.0
   path_provider: ^2.0.9 #Definir caminho no dispositivo.
