--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   firebase_messaging: ^11.2.12 #Envio de notificações por push
   carousel_slider: ^4.0.0 # Carrosel (arrastar imagens para o lado)
   transparent_image: ^2.0.0 #Transição de imagem
-  scoped_model: ^1.1.0
+  scoped_model: 2.0.0-nullsafety.0
   path_provider: ^2.0.9 #Definir caminho no dispositivo.
   firebase_auth: ^3.3.12 #Fazer autenticação
   url_launcher: ^6.0.20 #Fazer ligação ou localização
